examples/externalname-service/route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: httpbin-route
spec:
  parentRefs:
  - name: external-gateway
  hostnames:
  - cafe.example.com
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /external
    filters:
    - type: URLRewrite
      urlRewrite:
        path:
          type: ReplacePrefixMatch
          replacePrefixMatch: /
    backendRefs:
    - name: httpbin
      port: 80
  - matches:
    - path:
        type: PathPrefix
        value: /coffee
    backendRefs:
    - name: coffee
      port: 80
# ---
# apiVersion: gateway.networking.k8s.io/v1
# kind: TLSRoute
# metadata:
#   name: httpbin-tls-route
# spec:
#   parentRefs:
#   - name: external-gateway
#   hostnames:
#   - httpbin.example.com
#   rules:
#   - backendRefs:
#     - name: httpbin
#       port: 443
